# book-recommender

./: README.md  main.py  pyproject.toml
book_recommender/: __init__.py  app.py  data.py  prompts.py  recommender.py  vectors.py
