[tool.poetry]
name = "book-recommender"
version = "0.2.0"
description = "RAG book recommender with multi-model benchmarking and faithfulness evaluation."
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.0"
numpy = "^2.2.2"
chromadb = "^0.5.0"
sentence-transformers = "^2.2.0"
ollama = "^0.4.0"
gradio = "^5.0.0"
lettucedetect = "^0.1.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
matplotlib = "^3.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-q"
